# pico_w5100s

./: CMakeLists.txt
loopback/: CMakeLists.txt  simple_loopback.c
test/: CMakeLists.txt
test/iod_i2c_mpu6050/: CMakeLists.txt  iod_i2c_mpu6050.c
test/iod_i2c_ssd1306/: CMakeLists.txt  iod_i2c_ssd1306.c
test/iod_spi_ssd1331/: CMakeLists.txt  iod_spi_ssd1331.c
test/iod_spi_w5100s/: CMakeLists.txt  iod_spi_w5100s.c
